<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirmar_datos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rqcode.agenda1.ConfirmarDatos">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/TamañoPaddingTitulo"
        android:id="@+id/Confirmar"
        android:text="@string/TextoConfirmar"
        android:fontFamily="monospace"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/TamañoLetraTitulo"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NombreConfirmar"
        android:layout_below="@id/Confirmar"
        android:text="@string/Nombre"
        android:fontFamily="monospace"
        android:textColor="@color/colorPrimaryDark"
        android:paddingBottom="@dimen/TamañoLetraTitulo"
        android:gravity="left"
        />
    <android.support.v7.widget.AppCompatTextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/TituloFechaNacimientoConfirmar"
    android:layout_below="@id/NombreConfirmar"
    android:text="@string/TituloFechaNacimientoConfirmar"
    android:fontFamily="monospace"
    android:textColor="@color/colornegro"
    android:paddingBottom="@dimen/TamañoLetraTitulo"
    android:gravity="left"
    />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/FechaNacimientoConfirmar"
        android:layout_below="@id/NombreConfirmar"
        android:layout_toRightOf="@id/TituloFechaNacimientoConfirmar"
        android:text="@string/NombreConfirmar"
        android:fontFamily="monospace"
        android:textColor="@color/colorPrimaryDark"
        android:paddingBottom="@dimen/TamañoLetraTitulo"
        android:gravity="left"
        android:textStyle="bold"
        />
    <android.support.v7.widget.AppCompatTextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/TituloTelefonoConfirmar"
    android:layout_below="@id/FechaNacimientoConfirmar"
    android:text="@string/TituloTelefonoConfirmar"
    android:fontFamily="monospace"
    android:textColor="@color/colornegro"
    android:paddingBottom="@dimen/TamañoLetraTitulo"
    android:gravity="left"
    />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TelefonoConfirmar"
        android:layout_below="@id/TituloFechaNacimientoConfirmar"
        android:layout_toRightOf="@id/TituloTelefonoConfirmar"
        android:text="@string/TelefonoConfirmar"
        android:fontFamily="monospace"
        android:textColor="@color/colorPrimaryDark"
        android:paddingBottom="@dimen/TamañoLetraTitulo"
        android:gravity="left"
        android:textStyle="bold"
        />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TituloEmailConfirmar"
        android:layout_below="@id/TelefonoConfirmar"
        android:text="@string/TituloEmailConfirmar"
        android:fontFamily="monospace"
        android:textColor="@color/colornegro"
        android:paddingBottom="@dimen/TamañoLetraTitulo"
        android:gravity="left"
        />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EmailConfirmar"
        android:layout_below="@id/TelefonoConfirmar"
        android:layout_toRightOf="@id/TituloEmailConfirmar"
        android:text="@string/EmailConfirmar"
        android:fontFamily="monospace"
        android:textColor="@color/colorPrimaryDark"
        android:paddingBottom="@dimen/TamañoLetraTitulo"
        android:gravity="left"
        android:textStyle="bold"
        />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TituloDescripcionConfirmar"
        android:layout_below="@id/EmailConfirmar"
        android:text="@string/TituloDescripcionConfirmar"
        android:fontFamily="monospace"
        android:textColor="@color/colornegro"
        android:paddingBottom="@dimen/TamañoLetraTitulo"
        android:gravity="left"
        />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/DescripcionConfirmar"
        android:layout_below="@id/EmailConfirmar"
        android:layout_toRightOf="@id/TituloDescripcionConfirmar"
        android:text="@string/DescripcionConfirmar"
        android:fontFamily="monospace"
        android:textColor="@color/colorPrimaryDark"
        android:paddingBottom="@dimen/TamañoLetraTitulo"
        android:gravity="left"
        android:textStyle="bold"
        />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/BotonConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/TextoBotonEditar"
        />

</RelativeLayout>
