<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rqcode.agenda1.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilNombre"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tieNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Nombre"
            android:inputType="textCapWords"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilFechaNacimiento"
        android:layout_below="@id/tilNombre"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <DatePicker
            android:id="@+id/dpFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/FechaNacimiento"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
             />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilTelefono"
        android:layout_below="@id/tilFechaNacimiento"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tieTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Telefono"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilEmail"
        android:layout_below="@id/tilTelefono"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tieEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilDescripcion"
        android:layout_below="@id/tilEmail"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tieDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Descripcion"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bblSiguiente"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSiguiente"
            android:layout_alignParentBottom="true"
            android:text="@string/TextoBoton"
            />

    </android.support.v7.widget.ButtonBarLayout>

</RelativeLayout>
